# PastryInventory

./: AddItemPopup.qml  AddItemPopup.qml.autosave  ApiClient.js  CMakeLists.txt  Footer.qml  HomePage.qml  InventoryPage.qml  README.md  SettingsPage.qml  ShoppingPage.qml  main.cpp
